--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,43 @@
+appnope==0.1.0
 asgiref==3.2.10
+backcall==0.2.0
 beautifulsoup4==4.9.1
 bootstrap4==0.1.0
 bs4==0.0.1
 certifi==2020.6.20
 chardet==3.0.4
 cycler==0.10.0
-Django==3.1.9
+decorator==4.4.2
+decouple==0.0.7
+Django==3.0.7
 django-appconf==1.0.4
 django-extensions==3.0.8
 django-imagekit==4.0.2
 idna==2.10
 image==1.5.32
+ipython==7.19.0
+ipython-genutils==0.2.0
+jedi==0.17.2
 kiwisolver==1.2.0
 matplotlib==3.2.2
 numpy==1.19.1
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
 pilkit==2.0
-Pillow==8.1.1
+Pillow==7.2.0
+prompt-toolkit==3.0.8
+ptyprocess==0.6.0
+Pygments==2.7.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
+PyYAML==5.3.1
 requests==2.24.0
 six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.3.1
-urllib3==1.26.5
+traitlets==5.0.5
+urllib3==1.25.10
+wcwidth==0.2.5
+gunicorn
